# blackboard

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
skills/blackboard/: SKILL.md
src/: cli.rs  lib.rs  main.rs  mcp.rs
