[package]
name = "blackboard"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Blackboard collaboration plugin for mesh-llm"
repository = "https://github.com/Mesh-LLM/blackboard"

[dependencies]
anyhow = "1"
biip = "0.9.2"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
mesh-llm-plugin = { git = "https://github.com/Mesh-LLM/mesh-llm.git", branch = "codex/plugin-cli-commands" }
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
